[tool.poetry]
name = "forcecodes-backend-py"
version = "0.1.0"
description = ""
authors = ["Nikolas <timofeevnik41@gmail.com>"]
readme = "README.md"
packages = [{include = "forcecodes_backend_py"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.94.1"
loguru = "^0.6.0"
sqlalchemy = "^2.0.6"
greenlet = "^2.0.2"
uvicorn = "^0.21.1"
asyncpg = "^0.27.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
